# Spectral-Band-Attention-Networks-for-Efficient-Multi-Feature-Fusion-in-Hyperspectral-and-RGB-Data

./: .gitignore  README.md  a.py  activate.sh  pyproject.toml
Preprocessing/: data_creation.py  remove_boundary_bands.py  utils.py
models/: callbacks.py  model.py  model_architectures.py  modules.py  train_eval.py  transforms.py
models/ensemble/: base.py  config.yaml  data_loading.py  deep_ensemble.py  dynamic_weighting.py  ensemble.py  regression_ensemble.py  schedule_run.sh  scheduler.sh
models/hsi/: config.yaml  data_loading.py  sbam_schedule_run.sh  schedule_run.sh  trainer.py
models/hsi/band_selection/: bam.py  bam_ranked_channels.pkl  bam_ranked_channels_withoutTemp_LossMean.pkl  bam_scaled_attn.npy  bam_scaled_attn_withoutTemp_LossMean.npy  pcaLoading_ranked_channels.pkl  pca_loading.py  spa.py  spa_ranked_channels.pkl  triple_attention.py
models/hsi/dense_net/: architecture_sweep_config.yaml  config.yaml  denseNet.py  model_tuning.py  (+2 more)
models/rgb/: config.yaml  data_loading.py  schedule_run.sh  trainer.py
pics/: attention_module  convnext  hsi_[12, 18, 24, 6]  hsi_[18, 24, 16, 10]  hsi_[24, 18, 16, 10]  hsi_[32, 24, 16, 10]  sparse_bam_densenet
processing/: analysis.py  crop.py  data_creation.py  hsi_preprocessing.py  per_class_accuracy.py  remove_boundary_bands.py  result_analysis.py  train_eval.py  utils.py
rebalta/: arguments.py  config.yaml  train_attention.py  trainer.py
rebalta/datasets/: generate_datasets.py
rebalta/models/: model_2.py  model_3.py  model_4.py  util.py
triple_attn/: band_selection.py  bands.py  selected_bands.pkl
(+8 files in other folders)
